--- a/appointment.html
+++ b/appointment.html
@@ -13,7 +13,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./appointment.css">
+    <link rel="stylesheet" href="./css/index.css">
     <title>rent car</title>
   </head>
   <body>
